--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Getting Started: Serving Web Content</title>
+    <title>Welcome to Octank Trading</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="/css/jquery-ui.structure.min.css" type="text/css">
+
+    <script type="text/javascript" src="/js/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="/js/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="/js/sample.js"></script>
 </head>
 <body>
-    <p>Get your greeting <a href="/greeting">here</a></p>
+    <input type="hidden" id="hfAppRoot" value="/">
+    Trade Amount: <input type="text>
+    Trade ISIN: <input type="text>
+    <div id="btnBookTrade" class="button">Book trade</div>
 </body>
 </html>
