Implemented mass book trade

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,13 +31,13 @@
             </div>
         </div>      
         <div class="row">
-            <div class="col-3">
+            <div class="col-4">
                 <button id="btnBookTrade" type="button" class="btn btn-primary">Book trade</button>
             </div>
-            <div class="col-3">
-                <button id="btnMassBookTrades" type="button" class="btn btn-primary">Mass book trades</button>
+            <div class="col-4">
+                <button id="btnMassBookTrade" type="button" class="btn btn-primary">Mass book trade</button>
             </div>
-            <div class="col-6">
+            <div class="col-4">
                 &nbsp;
             </div>
         </div>
