--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,6 +13,7 @@
 <body>
     <input type="hidden" id="hfAppRoot" value="/">
     <div class="container">
+        <h1>Trading App v1.0</h1>
         <div class="row">
             <div class="col-12">
                 <img src="img/stock-board.jpg" style="height:180px;">
