Introduced SSM params

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -42,6 +42,17 @@
                 &nbsp;
             </div>
         </div>
+        <div class="row">
+            <div class="col-4">
+                Status
+            </div>
+            <div class="col-4">
+                &nbsp;
+            </div>
+            <div class="col-4">
+                &nbsp;
+            </div>
+        </div>        
     </div>
 </body>
 </html>
