--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Welcome to Octank Trading</title>
+    <title>Trading App v1.0</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="/css/opusmagus.css" type="text/css">
@@ -16,7 +16,7 @@
 <body>
     <input type="hidden" id="hfAppRoot" value="/">
     <div class="container">
-        <h1>Trading App v1.0.001</h1>
+        <h1>Trading App v1.0.002</h1>
         <div class="row">
             <div class="col-12">
                 <img src="img/stock-board.jpg" style="height:180px;">
