Added MySQL support

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -51,6 +51,7 @@
         </div>                
         <div class="row align-items-center justify-content-start" style="margin-top: 1rem;">
             <div class="col-12">
+                <button id="btnGetTrades" type="button" class="btn btn-primary">Get trades</button>
                 <button id="btnConnectToTradeSocket" type="button" class="btn btn-primary">Connect to trade socket</button>
                 <button id="btnSendtoTradeSocket" type="button" class="btn btn-primary">Send to trade socket</button>
             </div>
