--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="row align-items-center justify-content-start" >
             <div class="col-12">
-                <h1>Trading App v1.0.003</h1>
+                <h1>Trading App v1.0.025</h1>
                 <h2 id="instanceId">Instance ID:</h2>
             </div>
         </div>
@@ -44,18 +44,66 @@
                 <button id="btnMassBookTrade" type="button" class="btn btn-primary">Mass book trade</button>
             </div>
         </div>
-        <div class="row align-items-center justify-content-start">
-            <div class="col">
-                <div id="statusUpdateWidget" style="background-color: black; color:aqua; height: 16rem; width: 100%; overflow: auto; margin-top: 3rem;"></div>            
-            </div>
-        </div>                
+
+        <div id="tradeDetailsWidget" style="background-color: black; color:aqua; height: 32rem; width: 100%; overflow: auto; margin-top: 3rem;">
+            <div class="row align-items-center justify-content-start">
+                <div class="col-3">
+                    Trade Id
+                </div>
+                <div class="col-3">
+                    User Id
+                </div>
+                <div class="col">
+                    Trade ISIN
+                </div>
+                <div class="col"  id="trade-status">
+                    TradeStatus
+                </div>
+                <div class="col">
+                    TradeAmount
+                </div>
+                <div class="col">
+                    Quote
+                </div>
+                <div class="col-2">
+                    TradeDate
+                </div>
+            </div>    
+            <div id="tradeItems"></div>        
+        </div>             
         <div class="row align-items-center justify-content-start" style="margin-top: 1rem;">
             <div class="col-12">
-                <button id="btnGetTrades" type="button" class="btn btn-primary">Get trades</button>
+                <!--<button id="btnGetTrades" type="button" class="btn btn-primary">Get trades</button>
                 <button id="btnConnectToTradeSocket" type="button" class="btn btn-primary">Connect to trade socket</button>
-                <button id="btnSendtoTradeSocket" type="button" class="btn btn-primary">Send to trade socket</button>
+                <button id="btnSendtoTradeSocket" type="button" class="btn btn-primary">Send to trade socket</button>-->
             </div>
         </div>        
     </div>
+
+    <!-- Templates -->
+    <div class="row align-items-center justify-content-start tradeItem" style="margin-top: 1rem;" id="tradeItemTemplate">
+        <div class="col-3 trade-id">
+            Trade Id
+        </div>
+        <div class="col-3 user-id">
+            User Id
+        </div>
+        <div class="col trade-isin">
+            Trade ISIN
+        </div>
+        <div class="col trade-status">
+            Trade Status
+        </div>
+        <div class="col trade-amount">
+            Trade Amount
+        </div>
+        <div class="col quote">
+            Quote
+        </div>
+        <div class="col-2 trade-date">
+            Trade Date
+        </div>
+    </div>
+    <!-- End Templates -->
 </body>
 </html>
