--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,7 +47,7 @@
 
         <div id="tradeDetailsWidget">
             <div id="tradeItemsHeader" class="row align-items-center justify-content-start">
-                <div class="col-2">
+                <div class="col">
                     Trade Id
                 </div>
                 <div class="col">
@@ -56,17 +56,17 @@
                 <div class="col">
                     Trade ISIN
                 </div>
-                <div class="col"  id="trade-status">
-                    TradeStatus
+                <div class="col-2">
+                    Trade Status
                 </div>
                 <div class="col">
-                    TradeAmount
+                    Trade Amount
                 </div>
                 <div class="col">
                     Quote
                 </div>
-                <div class="col-2">
-                    TradeDate
+                <div class="col-3">
+                    Trade Date
                 </div>
             </div>    
             <div id="tradeItems"></div>        
@@ -96,7 +96,7 @@
 
     <!-- Templates -->
     <div class="row align-items-center justify-content-start tradeItem" style="margin-top: 1rem;" id="tradeItemTemplate">
-        <div class="col-2 trade-id">
+        <div class="col trade-id">
             Trade Id
         </div>
         <div class="col user-id">
@@ -105,7 +105,7 @@
         <div class="col trade-isin">
             Trade ISIN
         </div>
-        <div class="col trade-status">
+        <div class="col-2 trade-status">
             Trade Status
         </div>
         <div class="col trade-amount">
@@ -114,7 +114,7 @@
         <div class="col quote">
             Quote
         </div>
-        <div class="col-2 trade-date">
+        <div class="col-3 trade-date">
             Trade Date
         </div>
     </div>
